# ai_technical_challenge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
front/: frontend.html
policies/Delta/: Baggage & Travel Fees.md
travel_assistant/app/: error_handlers.py  main.py  routes.py
travel_assistant/app/models/: ask_models.py
travel_assistant/core/: constants.py  errors.py  settings.py
travel_assistant/infra/: embedding_interface.py  embeddings.py  llm_client.py  llm_service.py  qdrant_repository.py
travel_assistant/prompts/: airline_prompts.py
travel_assistant/rag/: context_builder.py  doc_loader.py  exceptions.py  generation_service.py  indexer_service.py  queries.py  query_builder.py  retriever_service.py
travel_assistant/rag/ingestion/: __init__.py  cli.py  doc_loader.py  errors.py  indexer_service.py  ingest_service.py  splitter.py
travel_assistant/rag/pipeline/: __init__.py  errors.py  generation_service.py  retriever_service.py
travel_assistant/rag/pipeline/memory/: __init__.py  conversation_memory.py
travel_assistant/tests/: conftest.py  splitter.py
travel_assistant/tests/rag/: test_doc_loader.py  test_indexer_service.py  test_retriever_service.py  test_splitter.py
travel_assistant/tests/rag/ingestion/: __init__.py  test_doc_loader.py  test_indexer_service.py  test_ingest_service.py  test_splitter.py
travel_assistant/tests/rag/pipeline/: __init__.py  test_retriever_service.py
