[tool.poetry]
name = "travel-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
fastapi = "^0.118.2"
uvicorn = "^0.37.0"
pymupdf = "^1.26.4"
markdown = "^3.9"
langchain-text-splitters = "^0.3.11"
langchain-openai = "^0.3.35"
langchain-huggingface = "^0.3.1"
langchain-community = "^0.3.31"
sentence-transformers = "^5.1.1"
pydantic-settings = "^2.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
