[tool.poetry]
name = "travel-assistant"
version = "0.1.0"
description = "AI Technical Challenge - Airline Policy RAG Chatbot"
authors = ["Miguel Barrios <miguel.barrios@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

fastapi = "^0.115.0"
uvicorn = "^0.30.6"
pymupdf = "^1.24.9"
markdown = "^3.7"
pydantic-settings = "^2.4.0"
qdrant-client = "^1.9.0"
streamlit = "^1.28.0"

langchain = "^0.3.7"
langchain-core = "^0.3.33"
langchain-community = "^0.3.7"
langchain-openai = "^0.3.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.9"
pytest = "^8.3.2"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.8.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
